--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -1,5 +1,5 @@
 /* HeroDetailComponent's private CSS styles */
-label {
+/* label {
   color: #435960;
   font-weight: bold;
 }
@@ -22,4 +22,10 @@ button:disabled {
   background-color: #eee;
   color: #ccc;
   cursor: auto;
+} */
+
+@media (max-width: 900px) {
+  h2 {
+    display: none;
+  }
 }
