--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,11 @@
 /* AppComponent's private CSS styles */
-h1 {
-  margin-bottom: 0;
+* {
+  margin: 0px;
+  padding: 0px;
+}
+body{
+  margin: 0px;
+  padding: 0px;
 }
 nav a {
   padding: 1rem;
@@ -11,10 +16,17 @@ nav a {
   color: #3d3d3d;
   border-radius: 4px;
 }
+
 nav a:hover {
   color: white;
   background-color: #42545C;
 }
+
 nav a.active {
   background-color: black;
 }
+
+.navbar {
+  margin-top: 0;
+}
+
