--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,49 @@
-<h1>{{title}}</h1>
-<nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
-</nav>
-<router-outlet></router-outlet>
+<body class="bg-[url('https://rare-gallery.com/uploads/posts/517094-iron-man-abstract.jpg')]">
+
+  <nav class="bg-red-600 border-red-600 px-2 sm:px-4 py-2.5  dark:bg-red-600">
+    <div class="container flex flex-wrap items-center justify-between mx-auto">
+
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png" class="h-6 mr-3 ml-9 sm:h-9" alt="Flowbite Logo" />
+
+      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+        <ul
+          class="flex flex-col p-4 mt-4 border border-red-600 rounded-lg bg-red-600 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-red-600 dark:bg-red-600 md:dark:bg-red-600 dark:bg-red-600">
+          <li>
+            <a routerLink="/dashboard"
+              class="block py-2 pl-3 pr-4 text-white bg-gray-700 rounded md:bg-transparent">Dashboard</a>
+
+            <!-- <a href="#" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Home</a> -->
+          </li>
+          <li>
+            <a routerLink="/heroes"
+              class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0">Heroes</a>
+
+            <!-- <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a> -->
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </nav>
+
+
+
+
+  <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-red-600 text-center md:text-5xl lg:text-6xl"><span
+      class="text-transparent bg-clip-text bg-gradient-to-r to-red-300 from-red-600">{{title}}</span></h1>
+
+
+  <router-outlet></router-outlet>
+
+
+
+  <!-- <div class="navbar">
+  <h1>{{title}}</h1>
+  <nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Heroes</a>
+  </nav>
+</div>
+
+<router-outlet></router-outlet> -->
+</body>
