--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -1,4 +1,4 @@
-/* HeroSearch private styles */
+/* HeroSearch private styles
 
 label {
   display: block;
@@ -44,4 +44,4 @@ li {
 ul.search-result {
   margin-top: 0;
   padding-left: 0;
-}
+} */
